--- a/packages.config
+++ b/packages.config
@@ -3,8 +3,11 @@
   <package id="FSharp.Compiler.Service" version="22.0.3" targetFramework="net45" />
   <package id="FSharp.Compiler.Tools" version="4.1.23" targetFramework="net45" />
   <package id="FSharp.Core" version="4.1.18" targetFramework="net45" />
+  <package id="FSPowerPack.Community" version="3.0.0.0" targetFramework="net45" />
   <package id="FSPowerPack.Core.Community" version="3.0.0.0" targetFramework="net45" />
+  <package id="FSPowerPack.Linq.Community" version="2.0.0.1" targetFramework="net45" />
   <package id="FSPowerPack.Metadata.Community" version="3.0.0.0" targetFramework="net45" />
+  <package id="FSPowerPack.Parallel.Seq.Community" version="2.0.0.1" targetFramework="net45" />
   <package id="Microsoft.DiaSymReader" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.DiaSymReader.PortablePdb" version="1.2.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
