--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -36,7 +36,13 @@
     <Reference Include="FSharp.Compiler.Service, Version=22.0.3.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\packages\FSharp.Compiler.Service.22.0.3\lib\net45\FSharp.Compiler.Service.dll</HintPath>
     </Reference>
+    <Reference Include="LocVolCalibExample, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>dlls\LocVolCalibExample.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
+    <Reference Include="NBodyExample, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>dlls\NBodyExample.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -63,6 +69,9 @@
       <Project>{c395f95b-1288-43bf-b230-1fa97f8d5ff5}</Project>
       <Name>FSharkPrelude</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="dlls" />
   </ItemGroup>
   <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
 </Project>
