--- a/FShark.fsproj
+++ b/FShark.fsproj
@@ -36,6 +36,10 @@
     <OtherFlags>--warnon:1182</OtherFlags>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cloo.clSharp, Version=0.9.2.7, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\Cloo.clSharp.0.9.2.7\lib\net20\Cloo.clSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Compiler.Service, Version=22.0.3.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>packages\FSharp.Compiler.Service.22.0.3\lib\net45\FSharp.Compiler.Service.dll</HintPath>
     </Reference>
@@ -52,6 +56,10 @@
     </Reference>
     <Reference Include="Microsoft.DiaSymReader.PortablePdb, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <HintPath>packages\Microsoft.DiaSymReader.PortablePdb.1.2.0\lib\net45\Microsoft.DiaSymReader.PortablePdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Options, Version=5.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\Mono.Options.5.3.0.1\lib\net4-client\Mono.Options.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
