--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cloo.clSharp" version="0.9.2.7" targetFramework="net45" />
   <package id="FSharp.Compiler.Service" version="22.0.3" targetFramework="net45" />
   <package id="FSharp.Compiler.Tools" version="4.1.23" targetFramework="net45" />
   <package id="FSharp.Core" version="4.1.18" targetFramework="net45" />
@@ -7,6 +8,7 @@
   <package id="FSPowerPack.Metadata.Community" version="3.0.0.0" targetFramework="net45" />
   <package id="Microsoft.DiaSymReader" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.DiaSymReader.PortablePdb" version="1.2.0" targetFramework="net45" />
+  <package id="Mono.Options" version="5.3.0.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net45" />
